; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_link.c_link_DeleteQueue.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_link.c_link_DeleteQueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.link = type { %struct.mqueue* }
%struct.mqueue = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @link_DeleteQueue(%struct.link* %0) #0 {
  %2 = alloca %struct.link*, align 8
  %3 = alloca %struct.mqueue*, align 8
  %4 = alloca %struct.mqueue*, align 8
  store %struct.link* %0, %struct.link** %2, align 8
  %5 = load %struct.link*, %struct.link** %2, align 8
  %6 = call %struct.mqueue* @LINK_HIGHQ(%struct.link* %5)
  store %struct.mqueue* %6, %struct.mqueue** %4, align 8
  %7 = load %struct.link*, %struct.link** %2, align 8
  %8 = getelementptr inbounds %struct.link, %struct.link* %7, i32 0, i32 0
  %9 = load %struct.mqueue*, %struct.mqueue** %8, align 8
  store %struct.mqueue* %9, %struct.mqueue** %3, align 8
  br label %10

10:                                               ; preds = %25, %1
  %11 = load %struct.mqueue*, %struct.mqueue** %3, align 8
  %12 = load %struct.mqueue*, %struct.mqueue** %4, align 8
  %13 = icmp ule %struct.mqueue* %11, %12
  br i1 %13, label %14, label %28

14:                                               ; preds = %10
  br label %15

15:                                               ; preds = %20, %14
  %16 = load %struct.mqueue*, %struct.mqueue** %3, align 8
  %17 = getelementptr inbounds %struct.mqueue, %struct.mqueue* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = load %struct.mqueue*, %struct.mqueue** %3, align 8
  %22 = call i32 @m_dequeue(%struct.mqueue* %21)
  %23 = call i32 @m_freem(i32 %22)
  br label %15

24:                                               ; preds = %15
  br label %25

25:                                               ; preds = %24
  %26 = load %struct.mqueue*, %struct.mqueue** %3, align 8
  %27 = getelementptr inbounds %struct.mqueue, %struct.mqueue* %26, i32 1
  store %struct.mqueue* %27, %struct.mqueue** %3, align 8
  br label %10

28:                                               ; preds = %10
  ret void
}

declare dso_local %struct.mqueue* @LINK_HIGHQ(%struct.link*) #1

declare dso_local i32 @m_freem(i32) #1

declare dso_local i32 @m_dequeue(%struct.mqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
